--- a/animés naruto.html
+++ b/animés naruto.html
@@ -110,8 +110,287 @@ text-decoration:none;
         <source src="https://www.myvi.top/stream/bMVd84H9NUy_L2700Sdm1A2/2.mp4?s=8UridwlFe__AFW7eA4XT_t3UIFox7uX7T7r3U06T21LYt120Tboc2K_IGfSxlUhQaAsgBHsd6GcB8aslBEGaFQ2&r=eUqOi33L4hcjzCLs5qzotxurJfOLnWthP-w3WfD7dApef-rTRNDhqadKTbjqoFin0&d=1375791&ri=7plYGXleHkaEbqofZheltg2"
         type="video/mp4"/>
     </video>
-
-    
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 11 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/lH0_P4nuV0qAlihC27KucQ2/2.mp4?s=9sJ5pinCzwLk6nKzgvA1SIFfSgBXvTkOeZZTytCzbNXqve8whmk-o075bojzqXsoaAsgBHsd6GcB8aslBEGaFQ2&r=A8YvdVgm6SxTDWkEp_LxyZbklXlZna6r7Wu0EY6I1MkKwO2i__80YKMDRZ0bVhB10&d=1375599&ri=I9Ccg3cTF06o-OJoqviS6g2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 12 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/CRU7GoM_5E6hfvU6h-L3jw2/2.mp4?s=pgEZ2Zc8A6UFVYOcqoUZSnCyxNpUB-z4YRixP6pCGqTT_T-w4E_zZ3RsXnGKFZ_xaAsgBHsd6GcB8aslBEGaFQ2&r=D7Lot4lmzhq4cLJItJuoG8S1boebj9GyHZkPNYTIevbioQ8Cq5ZRHBnVUPopJzZI0&d=1376751&ri=5GGCCO4-iUyizKH3aOjjpA2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 13 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://dv10.sibnet.ru/43/74/88/4374884.mp4?st=6Og58vHlzKVPCAIDFzycDA&e=1659134000&stor=10&noip=1"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 14 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/jStFIpprckGwv9VG3COSBw2/2.mp4?s=YVTI-skPW2oFjfjnPbioAdDBN61JvUuoGP03T4lHFbg9QyRq2AsFtSvhpTtRYQBPaAsgBHsd6GcB8aslBEGaFQ2&r=hMmVwYxv5Uzr9IcA09ZVpMeD38qUysfwOaRapZaTRCJwB4YJOhnDNCPrHb7utMaZ0&d=1376047&ri=dWavrvWLk02XPSi1DKy36A2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 15 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/o4KtrpEQHkyK3rlJua_yEA2/2.mp4?s=RTQrBaAjIryVM_qVcWzRFvzBSU53fpFdylxbvpnnnBO6j4aKjGrtFPuWZ_Ppcd5oaAsgBHsd6GcB8aslBEGaFQ2&r=7ZQr9aC5X4858T4PKwCZ97uTeqfpsCS-44AiiDs25ZoH6-qYQFJZvyiWPcIKG5c30&d=1376495&ri=6RUhP5cpQ0ulAU7wYBqPyg2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 16 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/tr7zSVFAAUmM0zFqOSpJZw2/2.mp4?s=fdpq9ddK8ud38KN_Ixd_7BCvbDoY71DLgNraL5dUzVcmCUN1QpCTDCw_WupmUzKQaAsgBHsd6GcB8aslBEGaFQ2&r=Ob89GVkdPySPl7uZ-BItUIGXesph1B2rHVJnRMlPw8tapnU_u-I8SZP7HkLl9v5b0&d=1376783&ri=QLrFkFMcBEyrvdNj9LWXcg2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 17 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/b27SoG-jpk6q6dG2JvVnog2/2.mp4?s=XnTJUdkMgAcBl469kQ2KlQzBBwqpxDYQhB0VdsVgv3glJJuQ5I6fwbtPElSdpOS6aAsgBHsd6GcB8aslBEGaFQ2&r=ErNNunoOozDVsk1r80QwmycFnqrhHh-s8pvgUQSRXk_NzIY1ndHi71WLulbFdcNE0&d=1374479&ri=xxC6bl2pUEqSf2gYlghztw2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 18 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/hYGDXSiMckicKUzzPoUUSg2/2.mp4?s=6VnY8W9WhSxTI2TpMUSbRa9ANCRZ4BTXG6GLLZ8l4BRGHxp2z2nNOoeFRWFqcHoLaAsgBHsd6GcB8aslBEGaFQ2&r=WzBTuFS65qkjiDfk_oUrTn3Ws4vOl8V9-MPd1nM8AXoNy6X2SGHs3bUlT-xLVMEK0&d=1375151&ri=Yu_SLi2MEUqHrAGucFsa9g2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 19 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/DEZNtpl7AEKmCQF0FAhPGg2/2.mp4?s=7X2f7Df-glSWi3gvfE3RXTE5jHPcW3irM1270EMCk2VT3vTFYCKTOnlares8Q3EHaAsgBHsd6GcB8aslBEGaFQ2&r=qZrzaeOjhjnZ2V6bFSpQsOqtAKJVr-q7aNYgwWkIZC8OicQ7mDghM2yxJ6y5QPZq0&d=1373679&ri=mL3qNl-1_kWRhGQ-vTm99w2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 20 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/iyY_b1NDcUSHsfy_a7XkkQ2/2.mp4?s=Y7eftS8Jnujx5UK2cZxr3tZC8gY9mTeJyGdW1ql0gMV7Nhj-PNKlLUAqiksbhDinaAsgBHsd6GcB8aslBEGaFQ2&r=EvjhbRnFhU5U4M-911Yanij4iPc7WOfbjuH28Po64gyTPS1a-Y0vmdQM5epMozRT0&d=1375215&ri=ZwWQ8F_hf0iqj8_dv1uwOQ2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 21 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/CWc2yZUckkO4lmrsUnyIfg2/2.mp4?s=yzIy-FxTP6SmNuyzAZEcSapvtXnRQPdtNvb_sBsRUjBvwGB1gwIIPTjMp_aeIxo4aAsgBHsd6GcB8aslBEGaFQ2&r=ZH9btoc-rNyMWk-YufxZkpw8deGJWgSmOmPgUhCwbwqrm_BuSSppiV_IcRVcXVl60&d=1376623&ri=xk9gX02okkSt2iV-lJLXlA2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 22 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/13LPpiKRZ0aFWES0ny4KEQ2/2.mp4?s=hMoAxeLzWZzRsq8fi8Hs9jwuqnZVqKsva4WyWK7lqFT8HHCqyW0hOZuKpgK-EWb7aAsgBHsd6GcB8aslBEGaFQ2&r=YM9KPcVTjqBZx21IvwUT_953BJfo6YHLtW2sLIHY_JKMehiVnI_7d_opwMXyLo7L0&d=1352751&ri=x6gv4E0qukKWYoxRjzBI2A2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 23 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://cvs112-1.sibnet.ru/43/74/89/4374892.mp4?st=5nOBilcocCgSty84qqLIaw&e=1659134000&stor=9&noip=1"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 24 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://cvs18-2.sibnet.ru/43/74/92/4374926.mp4?st=aUXA0OAKyRSL1odkFonMqg&e=1659134000&stor=47&noip=1"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 25 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/FDqbT3ajxEKG9jfte70NKg2/2.mp4?s=eiYO9Dord53Gq_09yBIXTln_F2rZTxetH75o4GVAouDTP8GygsSlO0HNz0ok4_9uaAsgBHsd6GcB8aslBEGaFQ2&r=ha1ny4qrnc5AvF1vYKP7scUXbzkJkwyPBcCh8Y9ujQ0-jSQ1-tLbyiN2wyT0-PzN0&d=1375727&ri=vy3C98Fq30mTRV74mq9yvw2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 26 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/sWDMfRTga0WpayhZNhgVIg2/2.mp4?s=o-Kmg2WTKKqNI90SpN3I9qCsCeP_oWrIUJx8VtiMig-nCrtd3SLLb2Niq0C4BKkNaAsgBHsd6GcB8aslBEGaFQ2&r=CPsH2FFk3GA05boEv_kb3Yyhona4wz3EkmRZ0kJKYwhxbuAaPejpn0QTMLQh4Lko0&d=1357455&ri=7DOMzxEwkUO_KGkU15pTTw2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 27 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/2p-f_gxVSEKzEmZPy9ncyw2/2.mp4?s=TvlYfNTeK-cgmJPOdlneyh5B4Vl4td84eVb62Brv0_FbPVv11cscAbfWKMXHAh7haAsgBHsd6GcB8aslBEGaFQ2&r=9v2v_vjrf2zKzGCeD2MfphxE6Zpz-Q3jWeVSQdY1BgoSN54vI5gVsCz-5yo8twLp0&d=1361231&ri=tvkQukvjtUK9X1RgpyKK8w2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 28 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/uaBUFNWiC0qiBpyX-PT8HA2/2.mp4?s=4c-_jDHxSXkGgh3PaccAy5VSKG35Kh1yU42eGDUO0r5HPgFlzGoKl-qkKhqAuSeiaAsgBHsd6GcB8aslBEGaFQ2&r=yR126tx7TIu_RoMQ3ApxFVyS0VRZ7sphX4VcOqI2IatfxF5VwEbiug7ZrNMkhrXb0&d=1359823&ri=g_otUIcysU-bSShi6xQizQ2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 29 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/KehNAf1-YECqBo3ul2LQyg2/2.mp4?s=qifMaB2eP1O5K4I_al3o6pQjUmd8MQlM1S1kKayK0LIQJtFKHJQ4eAeMxODCRJQ-aAsgBHsd6GcB8aslBEGaFQ2&r=spQNVl860LuBBRD_ONUvDVS-F6sYoZ-F1pjay6xobdAX94e8955CL5vl_oEudV6I0&d=1361007&ri=jjV3zQLIYE2sl3IiStHASA2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 30 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/h2tohYlZ_0aG96QPWf_tEA2/2.mp4?s=L1ats0-2wdXXcYfi8czPNcgNqnWi_-n7BPS9N_Ca3aZRTS5eykn1dLJkwXYlPJeJaAsgBHsd6GcB8aslBEGaFQ2&r=JRMRJKWRQxKG51PRx6y1dLAi8s3Ofls-TnKioyJBmjQevYaOUaIMJntAclc0Pb6I0&d=1359823&ri=I5ubKpDq3keOC1Gg-dn7XA2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 31 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/-fc6Ss55ykCKVpinR2Nbqw2/2.mp4?s=wYfCgkPwg2npccQO56hdyqg0ciiVmLvl_YioZEtt6pOhCvpJSm2IUvqUNEtDBIKfaAsgBHsd6GcB8aslBEGaFQ2&r=DtBwolPqZI4lxnJylYMCKemnoGVX3Jku9YdSqqUPxC0I1mM5sWwRJTN0oGRBjtJT0&d=1360815&ri=1hZHxdPUC0uPOCAaUHc2tg2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 32 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://cvs21-1.sibnet.ru/43/74/92/4374928.mp4?st=oDxHrWGICoQXCOXv8NnghQ&e=1659134000&stor=6&noip=1"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 33 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://dv34.sibnet.ru/43/74/92/4374929.mp4?st=_w2wiqGP9zcu8IeWlRfz1w&e=1659134000&stor=34&noip=1"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 34 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/KZ5Y6GrawkSOEeYpqGGcug2/2.mp4?s=GqfLzAx6iOrzalafzn3-FgOoSHzFvjBx4WkQq9WMZ_O6SRxvqtirGcmKdNTsBsxsaAsgBHsd6GcB8aslBEGaFQ2&r=UFudCBVG3gHdSVxgYqFKcY7if4TqMRGBShmmVNjV2vYVl6SNlJtKaOXQHVmZAps80&d=1360367&ri=wKbjfi0AyUSCEj_LYXuTWg2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 35 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/j_B75J7nuEWhLwLEqOpr7Q2/2.mp4?s=rHREjXB9XgyYKX9FoaMEOex9KNhpC4qbeUTSILKjaMp2JtLSKaVxmXoaC0mdsGALaAsgBHsd6GcB8aslBEGaFQ2&r=3MNtb5dqADtxYIzlntDwaZwRYvtoHHfKL8SQ5WhSxor49IqnoCJlqoRWeyXOyMVs0&d=1360239&ri=ZjGC963fIEC748rKL5Swyg2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 36 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/xdCkJQmhf0uVMTNHH7VBPg2/2.mp4?s=H1CCzVV4dam0hPEgVBkJQTBkuFwQxDf-0XAoa7C1weuzH0NT3fTSuGGJ1l41DdqdaAsgBHsd6GcB8aslBEGaFQ2&r=q8om00z4JeDfqw_Tj7hlzqXBi_l_UX56oDqT7S21XFNejORJKtUM5r0XHIbd2ETP0&d=1361007&ri=02koh-t6akiLPP9aBXzmqA2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 37 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/o567lnbj_k2EU4Esskt0pg2/2.mp4?s=5ek4RmyzBeNsERYUb6-4t1DtcHqUFZ3Kn5gP9wVzmBFAyekzdDLeCKU3h7ORjBLQaAsgBHsd6GcB8aslBEGaFQ2&r=XUr2Wk-k4ZSErtM8ZAqVpiqSYqSOFSXcXaXoZP-xr7mDtEHXQxedjLCDhI5K9mcG0&d=1359727&ri=PEP-ircmuUWeYAJuDiZ-Yw2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 38 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/-N9zhNnHz06uO0Bv90oviA2/2.mp4?s=prmIbVeypKes4mV6RKXc3r_WkGh0vznqgSJgg9oJc0HHAHUiESUt-4X-t-nJdkblaAsgBHsd6GcB8aslBEGaFQ2&r=13CFh1KAZVDaJEJPKS8skI-qv9Udn6uB4N0Ifo5To2w89rDsA5H-LuZ9UV6_iSfA0&d=1360879&ri=X1N2oBtZDEWuJ13AX5ogLg2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 39 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/24bkZYJqMk6wGyZDB9AJhw2/2.mp4?s=Ypf1_l8lbtY3ACjg0uPDCgkwu3gFL4yshMLHbcZv6SdwQaH_4xaFW_gXObzt5dUIaAsgBHsd6GcB8aslBEGaFQ2&r=E7JKVcGZ9muLAE0fiJT6RQI1PzOl61Jas402tIC8172jPZaur8AC3cxy_lt4qXFq0&d=1360815&ri=Nqc0U80Jl0OLYM_dUkZooA2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 40 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/DVAkVtPZqUWSc7iLj0ZCRw2/2.mp4?s=4LlLj1vtq_3n0griKUlE9LJfZ4R_JcDCdEac3C9ZQxb7xOTLlFjAM5Q_kSWCPKdmaAsgBHsd6GcB8aslBEGaFQ2&r=imFAwPVSL10lgiNtlIPXnTv3Ni_SJcvNfsm54a0acfvIY8qHtqHnohMMeLMKmdYn0&d=1360943&ri=2-C4Yp70N0mcFaofT2CVKQ2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 41 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://cvs14-2.sibnet.ru/43/75/24/4375240.mp4?st=MWn5zRJ5omqYQxRJWoej2A&e=1659134000&stor=48&noip=1"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 42 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://cvs17-2.sibnet.ru/43/75/24/4375244.mp4?st=h_80eqRR23n21PB5KIkynw&e=1659134000&stor=10&noip=1"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 43 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/aohrtBfOIUqHvpz6Txb5eQ2/2.mp4?s=nhQDfurxx1b4s4zM7VMdXvHEkQzOSkoJ2teRS3FKutV6Hx_G2FNGhlgyDjDQWAntaAsgBHsd6GcB8aslBEGaFQ2&r=3O23zysBDZmQmf3KqveFIA6NxbyqZP58hsyMxzjw6pPmRD2cS3mmHwtMgANiB3pb0&d=1361327&ri=k9KUnzF3MkqiHN6dwwyRHg2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 44 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/-GquaBUkS0O5U7XMlRemlQ2/2.mp4?s=eq8Ipz7isVVdqh7pErvJxW_KJaTNVhykuuZnHXb1X7qWfSidGdqnhoAN6vrJx2BMaAsgBHsd6GcB8aslBEGaFQ2&r=SJc2X1WfR6JM3XcwZMjXYCZhFXzKNvgkUD6nO_fDO8Deexylk3BECmzaOl3NFoFg0&d=1357935&ri=6SMKCHShNka0VhHc0toINg2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 45 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/PYALPFx0mEqNb5kEyS6uMg2/2.mp4?s=6wvMtK-z5_aoaDKnG4KFkQSEMEnaZk03_VuFPetvt0f-_2MZfQQ8C05sSKtYC5V-aAsgBHsd6GcB8aslBEGaFQ2&r=z63PWcttI7yVuqtVe8KD5fPKMEMysCDHOoh_Kl1WdjevtlMBGpLIVQcopNORvy5Q0&d=1349295&ri=9kxFLk1fqkuprU5BWlE-0g2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 46 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/vpjG2F3m2Ea4nbMAk06gUQ2/2.mp4?s=h93Ukak4CK26WPKIqMODkiaLXlGt-iWvPPrAblgCouGiK3sMxgZkvz4rSYbVBSCDaAsgBHsd6GcB8aslBEGaFQ2&r=LrU4nsMSJNr2-ghH4JkRaMi3YrfXfd3ihJYxZ2jaBmtmxG-Osdbzq649cI6HlflA0&d=1360047&ri=bydalugmvEGKL7kzyIUplA2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 47 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/maVW3pEPZkaWt-IOXZoTYQ2/2.mp4?s=XDlQrOfvJKA94lz7GRwhZF70wNVdxj1KRh300SCgKNc9K9z_BQ33fzALccXqZvd7aAsgBHsd6GcB8aslBEGaFQ2&r=ey0G5rO3FKh7uFCO8BNQ-9wTZ5YPtfn3CiQZK0yNVNDFP_dLb7iaM7mvpXes74Nm0&d=1359855&ri=iD54T_yybk2-0qSsSK4RBw2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 48 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/u1y885C3gEunTs8MIbzXRw2/2.mp4?s=Gs4xOTHxkzCZbnk088c-1U8-ix0jMjfKj5OX395MxVSSh5kPwc-2m5R9Gjx6bJwbaAsgBHsd6GcB8aslBEGaFQ2&r=6NkEvF9WQLmXLS5eYjzbh6rki_YGRTu2Sln3aWt2-ZDsuslghaPUIwW4wez5zsBN0&d=1358927&ri=gZzrOV0qb0uBCDonEPXJpg2"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 49 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://cvs17-2.sibnet.ru/43/75/24/4375247.mp4?st=ifM2Hyg7y9sYQxbyiKGUeQ&e=1659134000&stor=47&noip=1"
+        type="video/mp4"/>
+    </video>
+    <br>
+    <br>
+    <h1><font face="calibri"> Episode 50 </font></h1>
+    <video width="900px" controls loop >
+        <source src="https://www.myvi.top/stream/xV95i1qpjUSrb3UrzcmvGw2/2.mp4?s=Od78lWzR3jBug6eOIvb2JnvoePDrvHnDr0pEdSxmrP3J52-14h-QNPhd9ELPZs_RaAsgBHsd6GcB8aslBEGaFQ2&r=GL-8iORt2-bX4JDWSVCGMqjnpVIlT1T7bfcajxHMF0p2sokiku1mPT0G7shbA1NN0&d=1356463&ri=ub0t67bUD02jxHDpIOb-HA2"
+        type="video/mp4"/>
+    </video>
+    <h2><a href="naruto animes.html" class="btn"><font face="calibri">Page suivante</font></a></h2>
     <h2><a href="index.html" class="btn"><font face="calibri">REVENIR A L'ACCUEIL</font></a></h2>
     </center>
 
