--- a/les chaps.html
+++ b/les chaps.html
@@ -125,10 +125,19 @@
     <a href="chap98.html" class="btn"><h2>CHAPITRE 98</h2></a>
     <a href="chap99.html" class="btn"><h2>CHAPITRE 99</h2></a>
     <a href="chap100.html" class="btn"><h2>CHAPITRE 100</h2></a>
+    <a href="chap101.html" class="btn"><h2>CHAPITRE 101</h2></a>
+    <a href="chap102.html" class="btn"><h2>CHAPITRE 102</h2></a>
+    <a href="chap103.html" class="btn"><h2>CHAPITRE 103</h2></a>
     <a href="chap1050.html" class="btn"><h2>CHAPITRE 1050</a></h2>
     <a href="chap1051.html" class="btn"><h2>CHAPITRE 1051</a></h2>
     <a href="chap1052.html" class="btn"><h2>CHAPITRE 1052</a></h2>
     <a href="chap1053.html" class="btn"><h2>CHAPITRE 1053</a></h2>
+    <a href="chap1053.5.html" class="btn"><h2>CHAPITRE 1053.5</a></h2>
+    <a href="chap1053.6.html" class="btn"><h2>CHAPITRE 1053.6</a></h2>
+    <a href="chap1053.7.html" class="btn"><h2>CHAPITRE 1053.7</a></h2>
+    <a href="chap1053.8.html" class="btn"><h2>CHAPITRE 1053.8</a></h2>
+    <a href="chap1054.html" class="btn"><h2>CHAPITRE 1054</a></h2>
+    <a href="chap1055.html" class="btn"><h2>CHAPITRE 1055</a></h2>
     <img class="active" src="https://cdn.discordapp.com/attachments/868578469213265970/997950196044537906/Capture_25-removebg-preview.png" width="150" height="50" >
     <a href="acceuil.html" class="btn"><h2>Retourner à la liste des mangas</h2></a>
     <a href="index.html" class="btn"><h1>Revenir à l'acueil</font></h1></a>
