--- a/liste episodes naruto.html
+++ b/liste episodes naruto.html
@@ -39,11 +39,15 @@ text-decoration:none;
 </style>
 <body>
     <center>
-        <h1><font face="calibri"> Liste des animés </font></h1> 
+        <h1><font face="calibri"> Episodes naruto </font></h1> 
         <br>
         <br>
          
-    <h2><a href="liste episodes naruto.html" class="btn"><font face="calibri">Naruto</font></a></h2>
+    <h2><a href="animés naruto.html" class="btn"><font face="calibri">Episodes 1 à 50</font></a></h2>
+    <h2><a href="naruto animes.html" class="btn"><font face="calibri">Episodes 51 à 100</font></a></h2>
+    <h2><a href="naruto animes2.html" class="btn"><font face="calibri">Episodes 101 à 150</font></a></h2>
+    <h2><a href="naruto animes3.html" class="btn"><font face="calibri">Episodes 151 à 200</font></a></h2>
+    <h2><a href="naruto animes4.html" class="btn"><font face="calibri">Episodes 201 à 220</font></a></h2>
     <img class="active" src="https://cdn.discordapp.com/attachments/868578469213265970/997950196044537906/Capture_25-removebg-preview.png" width="150" height="50" >
    <br>
    <br>
