--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <img class="active" src="https://cdn.discordapp.com/attachments/868578469213265970/997950196044537906/Capture_25-removebg-preview.png" width="150" height="50" >
 
 <h1><font face="calibri">Animés</font></h1>
-<h3><a href="animés naruto.html" class="btn"><font face="calibri">Naruto épisode 1 à 10</font></a></h3>
+<h3><a href="liste episodes naruto.html" class="btn"><font face="calibri">Naruto VF (intégral)</font></a></h3>
 <img class="active" src="https://cdn.discordapp.com/attachments/868578469213265970/997950196044537906/Capture_25-removebg-preview.png" width="150" height="50" >
         
     <style>
