--- a/liste episodes demon slayer.html
+++ b/liste episodes demon slayer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animés</title>
+    <title>Demon Slayer 1 VF</title>
     <center>
     <img class="active" src="https://cdn.discordapp.com/attachments/868578469213265970/997947508124831778/unknown-removebg.png" width="550" height="250" >
     </center>
@@ -39,14 +39,13 @@ text-decoration:none;
 </style>
 <body>
     <center>
-        <h1><font face="calibri"> Liste des animés </font></h1> 
+        <h1><font face="calibri"> Episodes Demon Slayer   </font></h1> 
         <br>
         <br>
          
-    <h2><a href="liste episodes naruto.html" class="btn"><font face="calibri">Naruto VF</font></a></h2>
-    <h2><a href="liste eepisodes snk.html" class="btn"><font face="calibri">Shingeki no Kyojin VF ( l'attaque des titans )</font></a></h2>
-    <h2><a href="liste episodes jojo.html" class="btn"><font face="calibri">Jojo's Bizarre Adventure VOSTFR </font></a></h2>
-    <h2><a href="liste episodes demon slayer.html" class="btn"><font face="calibri">Demon Slayer VF</font></a></h2>
+    <h2><a href="demon slayer saison 1.html" class="btn"><font face="calibri">Saison 1 VF</font></a></h2>
+    <h2><a href="demon slayer saison2.html" class="btn"><font face="calibri">Saison 2 VF</font></a></h2>
+
     <img class="active" src="https://cdn.discordapp.com/attachments/868578469213265970/997950196044537906/Capture_25-removebg-preview.png" width="150" height="50" >
    <br>
    <br>
