--- a/jojo saison 2 anime.html
+++ b/jojo saison 2 anime.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shingeki no Kyojin VF</title>
+    <title>Jojo's Bizarre Adventure VOSTFR</title>
     <center>
     <img class="active" src="https://cdn.discordapp.com/attachments/868578469213265970/997947508124831778/unknown-removebg.png" width="550" height="250" >
     </center>
@@ -161,8 +161,8 @@ text-decoration:none;
     </video>
 
 
-
-    <h2><a href="snk saison 2 anime.html" class="btn"><font face="calibri">Page suivante</font></a></h2>
+    <h2><a href="jojo saison 1 anime.html" class="btn"><font face="calibri">Page précédente</font></a></h2>
+    <h2><a href="jojo saison 3 anime.html" class="btn"><font face="calibri">Page suivante</font></a></h2>
     <h2><a href="index.html" class="btn"><font face="calibri">REVENIR A L'ACCUEIL</font></a></h2>
     </center>
 
